--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -88,12 +88,11 @@ jobs:
         # Exclude
         # quickmaterialtest|quicktexturetest fails because of QT_QUICK_BACKEND=software AND QT_QPA_PLATFORM=offscreen
         # quickinspectortest|quickinspectortest2 fails at CI, local with 6.2.4 passes
-        # modelinspectortest fails in Qt6/CI passes locally
       - name: Run tests on Linux Qt6 (offscreen)
         if: ${{ runner.os == 'Linux' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
-          --exclude-regex "quickmaterialtest|quicktexturetest|bindinginspectortest|quickinspectortest|quickinspectortest2|modelinspectortest"
+          --exclude-regex "quickmaterialtest|quicktexturetest|bindinginspectortest|quickinspectortest|quickinspectortest2"
         env:
           QT_QPA_PLATFORM: offscreen
           QT_QUICK_BACKEND: software
@@ -112,7 +111,6 @@ jobs:
         #28 - probeabidetectortest (Failed)
         #31 - launchertest (Failed)
         #32 - clientconnectiontest (Failed)
-        # modelinspectortest fails in Qt6/CI passes locally
         # quickinspectortest2
         # bindinginspectortest fails in client_and_ui
       - name: Run tests Qt6 on macOS
@@ -120,7 +118,7 @@ jobs:
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex
-          "probeabidetectortest|launchertest|clientconnectiontest|modelinspectortest|quickinspectortest2|bindinginspectortest|quicktexturetest"
+          "probeabidetectortest|launchertest|clientconnectiontest|quickinspectortest2|bindinginspectortest|quicktexturetest"
 
         # Exclude
         # quicktexturetest
@@ -134,12 +132,11 @@ jobs:
         # Exclude
         # quicktexturetest
         # bindinginspectortest
-        # modelinspectortest fails in Qt6/CI passes locally
       - name: Qt6 Run tests on Windows
         if: ${{ runner.os == 'Windows' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} -C 'Release' --output-on-failure
-          --exclude-regex "quicktexturetest|launchertest|bindinginspectortest|modelinspectortest|probesettingstest"
+          --exclude-regex "quicktexturetest|launchertest|bindinginspectortest|probesettingstest"
 
       - name: Read tests log when it fails
         uses: andstor/file-reader-action@v1
