--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,19 +23,19 @@ jobs:
           - windows-latest
           - macos-latest
 
-        build_type:
-          - Release
-
-        client_only:
-          - client_only
-          - client_and_ui
-
         config:
-          - qt_major: 5
+          - preset: ci-dev-client-only-qt5
             qt_version: "5.15"
-          - qt_major: 6
+
+          - preset: ci-dev-client-only-qt6
             qt_version: "6.5.*"
             qt_modules: qtshadertools qtscxml
+
+          - preset: ci-dev-client-and-ui-qt5
+            qt_version: "5.15"
+
+          - preset: ci-dev-client-and-ui-qt6
+            qt_version: "6.5.*"
 
     steps:
       - name: Install Qt with options and default aqtversion
@@ -58,15 +58,11 @@ jobs:
 
       - name: Configure project
         run: >
-          cmake -S . -B ./build -G Ninja
-          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
-          -DGAMMARAY_CLIENT_ONLY_BUILD=${{ matrix.client_only == 'client_only' }}
+          cmake -S . -G Ninja --preset ${{ matrix.config.preset }}
           -DGAMMARAY_BUILD_DOCS=${{ runner.os == 'Linux' }}
-          -DGAMMARAY_INSTALL_QT_LAYOUT=ON
-          -DGAMMARAY_MULTI_BUILD=OFF
 
       - name: Build Project
-        run: cmake --build ./build
+        run: cmake --build ./build-${{ matrix.config.preset }}
 
       - name: Install dependencies on Ubuntu
         if: ${{ runner.os == 'Linux' }}
@@ -81,9 +77,9 @@ jobs:
         # Exclude
         # quickmaterialtest|quicktexturetest fails because of QT_QUICK_BACKEND=software
       - name: Run tests on Linux Qt5 (offscreen)
-        if: ${{ runner.os == 'Linux' && matrix.config.qt_major == 5 }}
+        if: ${{ runner.os == 'Linux' && startsWith(matrix.config.qt_version, '5.') }}
         run: >
-          ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+          ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex "quickmaterialtest|quicktexturetest|timertoptest"
         env:
           QT_QPA_PLATFORM: offscreen
@@ -94,9 +90,9 @@ jobs:
         # quickinspectortest|quickinspectortest2 fails at CI, local with 6.2.4 passes
         # modelinspectortest fails in Qt6/CI passes locally
       - name: Run tests on Linux Qt6 (offscreen)
-        if: ${{ runner.os == 'Linux' && matrix.config.qt_major == 6 }}
+        if: ${{ runner.os == 'Linux' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
-          ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+          ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex "quickmaterialtest|quicktexturetest|bindinginspectortest|quickinspectortest|quickinspectortest2|modelinspectortest|timertoptest"
         env:
           QT_QPA_PLATFORM: offscreen
@@ -107,9 +103,9 @@ jobs:
         #26 - launchertest (Failed)
         #37 - quickinspectortest2 (Failed)
       - name: Run tests Qt5 on macOS
-        if: ${{ runner.os == 'macOS' && matrix.config.qt_major == 5 }}
+        if: ${{ runner.os == 'macOS' && startsWith(matrix.config.qt_version, '5.') }}
         run: >
-          ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+          ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex "probeabidetectortest|launchertest|quickinspectortest2|timertoptest"
 
         # Exclude
@@ -120,9 +116,9 @@ jobs:
         # quickinspectortest2
         # bindinginspectortest fails in client_and_ui
       - name: Run tests Qt6 on macOS
-        if: ${{ runner.os == 'macOS' && matrix.config.qt_major == 6 }}
+        if: ${{ runner.os == 'macOS' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
-          ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+          ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex
           "probeabidetectortest|launchertest|clientconnectiontest|modelinspectortest|quickinspectortest2|bindinginspectortest|quicktexturetest|timertoptest"
 
@@ -130,9 +126,9 @@ jobs:
         # quicktexturetest
         # bindinginspectortest
       - name: Qt5 Run tests on Windows
-        if: ${{ runner.os == 'Windows' && matrix.config.qt_major == 5 }}
+        if: ${{ runner.os == 'Windows' && startsWith(matrix.config.qt_version, '5.') }}
         run: >
-          ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+          ctest --test-dir ./build-${{ matrix.config.preset }} -C 'Release' --output-on-failure
           --exclude-regex "quicktexturetest|bindinginspectortest|timertoptest"
 
         # Exclude
@@ -140,13 +136,13 @@ jobs:
         # bindinginspectortest
         # modelinspectortest fails in Qt6/CI passes locally
       - name: Qt6 Run tests on Windows
-        if: ${{ runner.os == 'Windows' && matrix.config.qt_major == 6 }}
+        if: ${{ runner.os == 'Windows' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
-          ctest --test-dir ./build -C ${{ matrix.build_type }} --output-on-failure
+          ctest --test-dir ./build-${{ matrix.config.preset }} -C 'Release' --output-on-failure
           --exclude-regex "quicktexturetest|launchertest|bindinginspectortest|modelinspectortest|timertoptest|probesettingstest"
 
       - name: Read tests log when it fails
         uses: andstor/file-reader-action@v1
         if: ${{ failure() }}
         with:
-          path: "./build/Testing/Temporary/LastTest.log"
+          path: "./build-${{ matrix.config.preset }}/Testing/Temporary/LastTest.log"
