--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -92,7 +92,7 @@ jobs:
         if: ${{ runner.os == 'Linux' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
-          --exclude-regex "quickmaterialtest|quicktexturetest|bindinginspectortest|quickinspectortest|quickinspectortest2"
+          --exclude-regex "quickmaterialtest|quicktexturetest|quickinspectortest|quickinspectortest2"
         env:
           QT_QPA_PLATFORM: offscreen
           QT_QUICK_BACKEND: software
@@ -112,13 +112,12 @@ jobs:
         #31 - launchertest (Failed)
         #32 - clientconnectiontest (Failed)
         # quickinspectortest2
-        # bindinginspectortest fails in client_and_ui
       - name: Run tests Qt6 on macOS
         if: ${{ runner.os == 'macOS' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} --output-on-failure
           --exclude-regex
-          "probeabidetectortest|launchertest|clientconnectiontest|quickinspectortest2|bindinginspectortest|quicktexturetest"
+          "probeabidetectortest|launchertest|clientconnectiontest|quickinspectortest2|quicktexturetest"
 
         # Exclude
         # quicktexturetest
@@ -131,12 +130,11 @@ jobs:
 
         # Exclude
         # quicktexturetest
-        # bindinginspectortest
       - name: Qt6 Run tests on Windows
         if: ${{ runner.os == 'Windows' && startsWith(matrix.config.qt_version, '6.') }}
         run: >
           ctest --test-dir ./build-${{ matrix.config.preset }} -C 'Release' --output-on-failure
-          --exclude-regex "quicktexturetest|launchertest|bindinginspectortest|probesettingstest"
+          --exclude-regex "quicktexturetest|launchertest|probesettingstest"
 
       - name: Read tests log when it fails
         uses: andstor/file-reader-action@v1
