Fix two CMake uninitialized-variable warnings

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -572,6 +572,7 @@ endif()
 
 string(TOUPPER "${CMAKE_BUILD_TYPE}" UPPERCASE_CMAKE_BUILD_TYPE)
 
+set(GAMMARAY_PROBE_ABI_POSTFIX "")
 if(NOT UPPERCASE_CMAKE_BUILD_TYPE MATCHES "^REL")
     set(GAMMARAY_PROBE_ABI_POSTFIX "${CMAKE_DEBUG_POSTFIX}")
 endif()
